# Blink

./: LICENSE  README.md  package-lock.json
backend/: ai_engine.py  api_routes.js  leaderboard_service.js  package.json
contracts/: BlinkPrediction.rs  Cargo.toml  Leaderboard.rs  utils.rs
contracts/src/: lib.rs
frontend/: index.html  package-lock.json  package.json
frontend/components/: Card.js  Card.jsx  SignUpModal.jsx
frontend/components/ui/: Header.jsx  Header.tsx  HeroSection.jsx  filterNav.jsx
frontend/pages/: Home.js  Home.jsx
frontend/pages/Dashboard/: DashboardStats.jsx
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Card.jsx  SignUpModal.jsx
frontend/src/components/ui/: Header.jsx  HeroSection.jsx  filterNav.jsx  filternavTwo.jsx
frontend/src/pages/: Home.jsx
frontend/src/pages/Dashboard/: Dashboard.jsx  DashboardFooter.jsx  DashboardHeader.jsx  DashboardHistory.jsx
frontend/styles/: tailwind.css
tests/: api_tests.js  contract_tests.rs
