[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[lib]
name = "blink"
crate-type = ["cdylib"]

[features]
default = []
contract = ["linera-sdk/contract"]
service = ["linera-sdk/service"]

[dependencies]
linera-sdk = "0.14"
linera-views = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

